--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
 name: myproject
 output_dir: ../docs
 navbar:
-  title: myproject
+  title: Welcome
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,24 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  - text: Projects
+  - icon: fa-gear
+  - menu:
+    - text: "Linear Regression"
+    - text: "Page A"
+      href: page-a.html
+    - text: "Page B"
+      href: page-b.html
+    - text: "Page C"
+      href: page-c.html
+
+    - text: "Machine Learning"
+    - text: "Page D"
+      href: page-d.html
+
+
+
+
   right:
   - icon: fa-github
     text: Source code
@@ -19,3 +37,4 @@ output:
     toc_float: yes
     theme: cosmo
     highlight: textmate
+
